--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+$backgournd-color: rgb(247,247,247);
+body {
+    background-color: $backgournd-color;
+    width: fit-content;
+    width: 100%;
+    margin: 0;
+}
+li {
+    list-style-type: none;
+}
